# ngfx

./: .gitignore  404.html  CMakeLists.txt  Doxyfile  GPBuild  GPDeps  README.md  index.html  index.md  mkdocs.yml  ngfx.pc.in  sitemap.xml
.doxybook/: config.json
.github/workflows/: ci_linux.yml  ci_mac.yml  ci_windows.yml
api/Classes/: index.html
api/Classes/classBufferUtil/: index.html
api/Classes/classCamera/: index.html
api/Classes/classCommandBuffer/: index.html
api/Classes/classDevice/: index.html
api/Classes/classDrawOp/: index.html
api/Classes/classFence/: index.html
api/Classes/classFilterOp/: index.html
api/Classes/classFramebuffer/: index.html
api/Classes/classngfx_1_1BaseApplication/: index.html
api/Classes/classngfx_1_1Buffer/: index.html
api/Classes/classngfx_1_1Camera/: index.html
api/Classes/classngfx_1_1CommandBuffer/: index.html
api/Classes/classngfx_1_1ComputeApplication/: index.html
api/Classes/classngfx_1_1ComputeOp/: index.html
api/Classes/classngfx_1_1ComputePass/: index.html
api/Classes/classngfx_1_1ComputePipeline/: index.html
api/Classes/classngfx_1_1ComputeShaderModule/: index.html
api/Classes/classngfx_1_1D3DBlitOp/: index.html
api/Classes/classngfx_1_1D3DBuffer/: index.html
api/Classes/classngfx_1_1D3DCommandList/: index.html
api/Classes/classngfx_1_1D3DCommandQueue/: index.html
api/Classes/classngfx_1_1D3DComputePass/: index.html
api/Classes/classngfx_1_1D3DComputePipeline/: index.html
api/Classes/classngfx_1_1D3DComputeShaderModule/: index.html
api/Classes/classngfx_1_1D3DDescriptorHandle/: index.html
api/Classes/classngfx_1_1D3DDescriptorHeap/: index.html
api/Classes/classngfx_1_1D3DDevice/: index.html
api/Classes/classngfx_1_1D3DFence/: index.html
api/Classes/classngfx_1_1D3DFragmentShaderModule/: index.html
api/Classes/classngfx_1_1D3DFramebuffer/: index.html
api/Classes/classngfx_1_1D3DGraphics/: index.html
api/Classes/classngfx_1_1D3DGraphicsContext/: index.html
api/Classes/classngfx_1_1D3DGraphicsPipeline/: index.html
api/Classes/classngfx_1_1D3DPipeline/: index.html
api/Classes/classngfx_1_1D3DPipelineCache/: index.html
api/Classes/classngfx_1_1D3DReadbackBuffer/: index.html
api/Classes/classngfx_1_1D3DRenderPass/: index.html
api/Classes/classngfx_1_1D3DShaderModule/: index.html
api/Classes/classngfx_1_1D3DSurface/: index.html
api/Classes/classngfx_1_1D3DSwapchain/: index.html
api/Classes/classngfx_1_1D3DTexture/: index.html
api/Classes/classngfx_1_1D3DVertexShaderModule/: index.html
api/Classes/classngfx_1_1D3DWindow/: index.html
api/Classes/classngfx_1_1Device/: index.html
api/Classes/classngfx_1_1DrawColorOp/: index.html
api/Classes/classngfx_1_1DrawMeshOp/: index.html
api/Classes/classngfx_1_1DrawOp/: index.html
api/Classes/classngfx_1_1DrawTextureOp/: index.html
api/Classes/classngfx_1_1FPSCounter/: index.html
api/Classes/classngfx_1_1Fence/: index.html
api/Classes/classngfx_1_1File/: index.html
api/Classes/classngfx_1_1FileUtil/: index.html
api/Classes/classngfx_1_1FilterOp/: index.html
api/Classes/classngfx_1_1FragmentShaderModule/: index.html
api/Classes/classngfx_1_1Framebuffer/: index.html
api/Classes/classngfx_1_1GLFWWindow/: index.html
api/Classes/classngfx_1_1Graphics/: index.html
api/Classes/classngfx_1_1GraphicsContext/: index.html
api/Classes/classngfx_1_1GraphicsPipeline/: index.html
api/Classes/classngfx_1_1InputListener/: index.html
api/Classes/classngfx_1_1MTLApplication/: index.html
api/Classes/classngfx_1_1MTLBuffer/: index.html
api/Classes/classngfx_1_1MTLCommandBuffer/: index.html
api/Classes/classngfx_1_1MTLCommandEncoder/: index.html
api/Classes/classngfx_1_1MTLComputeCommandEncoder/: index.html
api/Classes/classngfx_1_1MTLComputePipeline/: index.html
api/Classes/classngfx_1_1MTLComputeShaderModule/: index.html
api/Classes/classngfx_1_1MTLDepthStencilTexture/: index.html
api/Classes/classngfx_1_1MTLDevice/: index.html
api/Classes/classngfx_1_1MTLFragmentShaderModule/: index.html
api/Classes/classngfx_1_1MTLFramebuffer/: index.html
api/Classes/classngfx_1_1MTLGraphics/: index.html
api/Classes/classngfx_1_1MTLGraphicsContext/: index.html
api/Classes/classngfx_1_1MTLGraphicsPipeline/: index.html
api/Classes/classngfx_1_1MTLPipelineCache/: index.html
api/Classes/classngfx_1_1MTLRenderPass/: index.html
api/Examples/: index.html
api/Files/: index.html
api/Modules/: index.html
api/Namespaces/: index.html
api/Pages/: index.html
build_scripts/: build.py  build.sh  clang_format.sh  common.py  configure.py  configure.sh  install.py  install.sh  install_deps.in  install_deps.py  install_deps.sh  install_deps_darwin.ninja.in  install_deps_linux.ninja.in  install_deps_windows.ninja.in  sync_deps.sh
build_scripts/windows/: find_vcvars64.ps1  msvc-env.ps1  set_env.ps1  set_env.sh  start_msvc_env.sh
data/shaders/: common.vert.h  d3dBlitOp.frag  d3dBlitOp.vert  drawColor.frag  drawColor.vert  drawMesh.frag  drawMesh.vert  drawTexture.frag  drawTexture.vert  matrixMultiply.comp
doc/: LICENSE.txt  NGFX Architecture.drawio
search/: search_index.json
test/: CMakeLists.txt
test/blend/: Main.cpp
test/buffer/: Main.cpp
test/common/: UnitTest.cpp  UnitTest.h
test/compute/: Main.cpp
test/cull/: Main.cpp
test/data/shaders/: common.vert.h  testComputeSum.comp  testConvolve.comp  testInstancing.frag  testInstancing.vert  testSsbo.frag  testSsbo.vert  testTransform.frag  testTransform.vert  testTranspose.comp  testUbo.vert
test/depth/: Main.cpp
test/geometry/: Main.cpp
test/matrixMultiply/: MatrixMultiplyApp.cpp  MatrixMultiplyApp.h
test/mesh/: MeshApp.cpp  MeshApp.h
test/ref/skia/: CMakeLists.txt
test/ref/skia/blend/: Main.cpp
test/scissors/: Main.cpp
test/texture/: Main.cpp  TextureApp.cpp  TextureApp.h
test/transform/: Main.cpp
test/triangle/: TriangleApp.cpp  TriangleApp.h
test/viewport/: Main.cpp
tools/: compile_shaders_dx12.cpp  compile_shaders_mtl.cpp  compile_shaders_vk.cpp
tools/meshTool/: Main.cpp  MeshTool.cpp  MeshTool.h
(+632 files in other folders)
