include(CTest)

set(NGFX_TEST_DATA_DIR ${CMAKE_CURRENT_BINARY_DIR}/data)
set(NGFX_TEST_DATA_REF_DIR ${CMAKE_CURRENT_SOURCE_DIR}/data/ref)
file(GLOB_RECURSE NGFX_TEST_DATA_SHADER_FILES data/shaders/*)
install(FILES ${NGFX_TEST_DATA_SHADER_FILES} DESTINATION ${NGFX_TEST_DATA_DIR}/shaders)

file(GLOB_RECURSE NGFX_TEST_SOURCE_FILES common/*.cpp)
add_library(ngfx_test STATIC ${NGFX_TEST_SOURCE_FILES})
target_link_libraries(ngfx_test ngfx)
target_compile_definitions(ngfx_test PUBLIC
    -DNGFX_TEST_DATA_DIR="${NGFX_TEST_DATA_DIR}"
    -DNGFX_TEST_DATA_REF_DIR="${NGFX_TEST_DATA_REF_DIR}")

function(build_test name)
file(GLOB_RECURSE TEST_SOURCE_FILES ${name}/*.cpp ${name}/*.h ${name}/*.mm)
if(NGFX_GRAPHICS_BACKEND_METAL)
add_executable(test_${name} ${TEST_SOURCE_FILES} ${APP_BACKEND_SOURCE_FILES} ${NGFX_DIR}/src/ngfx/porting/appkit/Main.storyboard)
set(RESOURCE_FILES ${NGFX_DIR}/src/ngfx/porting/appkit/Info.plist ${NGFX_DIR}/src/ngfx/porting/appkit/Main.storyboard)
set_target_properties(test_${name} PROPERTIES
    MACOSX_BUNDLE TRUE
    MACOSX_FRAMEWORK_IDENTIFIER org.gopro.ngfx
    RESOURCE "${RESOURCE_FILES}"
    MACOSX_BUNDLE_INFO_PLIST ${NGFX_DIR}/src/ngfx/porting/appkit/Info.plist
)
else()
add_executable(test_${name} ${TEST_SOURCE_FILES})
endif()
target_link_libraries(test_${name} ngfx_test)
endfunction()

build_test(blend)
build_test(buffer)
build_test(compute)
build_test(cull)
build_test(depth)
build_test(geometry)
build_test(media)
build_test(msaa)
build_test(renderToTexture)
build_test(sampler)
build_test(scissors)
build_test(stencil)
build_test(texture)
build_test(transform)
build_test(viewport)

add_test(NAME blend_darken COMMAND test_blend darken)
add_test(NAME blend_lighten COMMAND test_blend lighten)
add_test(NAME blend_multiply COMMAND test_blend multiply)
add_test(NAME blend_screen COMMAND test_blend screen)
add_test(NAME blend_overlay COMMAND test_blend overlay)
add_test(NAME blend_src COMMAND test_blend src)
add_test(NAME blend_src_over COMMAND test_blend src_over)
add_test(NAME blend_src_in COMMAND test_blend src_in)
add_test(NAME blend_dst COMMAND test_blend dst)
add_test(NAME blend_dst_over COMMAND test_blend dst_over)
add_test(NAME blend_dst_in COMMAND test_blend dst_in)
add_test(NAME blend_clear COMMAND test_blend clear)
add_test(NAME blend_src_out COMMAND test_blend src_out)
add_test(NAME blend_dst_out COMMAND test_blend dst_out)

add_test(NAME buffer_vertex COMMAND test_buffer vertex)
add_test(NAME buffer_index COMMAND test_buffer index)
add_test(NAME buffer_uniform COMMAND test_buffer uniform)
add_test(NAME buffer_storage COMMAND test_buffer storage)
add_test(NAME buffer_instancing COMMAND test_buffer instancing)
add_test(NAME buffer_upload COMMAND test_buffer upload)
add_test(NAME buffer_upload_subregion COMMAND test_buffer upload_subregion)
add_test(NAME buffer_download COMMAND test_buffer download)
add_test(NAME buffer_download_subregion COMMAND test_buffer download_subregion)
add_test(NAME buffer_map COMMAND test_buffer map)

add_test(NAME compute_matrix_multiply COMMAND test_compute matrix_multiply)
add_test(NAME compute_gaussian COMMAND test_compute gaussian)
add_test(NAME compute_particles COMMAND test_compute particles)
add_test(NAME compute_colorspace_conversion COMMAND test_compute colorspace_conversion)
add_test(NAME compute_lens_correction COMMAND test_compute lens_correction)

add_test(NAME cull_front COMMAND test_cull front)
add_test(NAME cull_back COMMAND test_cull back)
add_test(NAME cull_none COMMAND test_cull none)

add_test(NAME depth_d32s8 COMMAND test_depth d32_float_s8_uint)
add_test(NAME depth_d32 COMMAND test_depth d32_float)
add_test(NAME depth_d24s8 COMMAND test_depth d24_unorm_s8_uint)
add_test(NAME depth_d16 COMMAND test_depth d16_unorm)

add_test(NAME geometry_point_list COMMAND test_geometry point_list)
add_test(NAME geometry_line_list COMMAND test_geometry line_list)
add_test(NAME geometry_line_strip COMMAND test_geometry line_strip)
add_test(NAME geometry_triangle_list COMMAND test_geometry triangle_list)
add_test(NAME geometry_triangle_strip COMMAND test_geometry triangle_strip)

add_test(NAME media_jpg COMMAND test_media jpg)
add_test(NAME media_png COMMAND test_media png)
add_test(NAME media_export_jpg COMMAND test_media export_jpg)
add_test(NAME media_export_png COMMAND test_media export_png)

add_test(NAME msaa COMMAND test_msaa)

add_test(NAME rtt_r COMMAND test_renderToTexture r)
add_test(NAME rtt_rg COMMAND test_renderToTexture rg)
add_test(NAME rtt_rgba COMMAND test_renderToTexture rgba)
add_test(NAME rtt_cubemap COMMAND test_renderToTexture cubemap)
add_test(NAME rtt_depth COMMAND test_renderToTexture depth)
add_test(NAME rtt_msaa COMMAND test_renderToTexture msaa)
add_test(NAME rtt_cubemap_msaa COMMAND test_renderToTexture cubemap_msaa)

add_test(NAME sampler_2d COMMAND test_sampler 2d)
add_test(NAME sampler_3d COMMAND test_sampler 3d)
add_test(NAME sampler_cube COMMAND test_sampler cube)
add_test(NAME sampler_array COMMAND test_sampler array)
add_test(NAME sampler_2d_ms COMMAND test_sampler 2d_ms)

add_test(NAME scissors COMMAND test_scissors)

add_test(NAME stencil_mask COMMAND test_stencil mask)
add_test(NAME stencil_polygon COMMAND test_stencil polygon)

add_test(NAME texture_r8 COMMAND test_texture color r8_unorm)
add_test(NAME texture_rg8 COMMAND test_texture color r8g8_unorm)
add_test(NAME texture_rgba8 COMMAND test_texture color r8g8b8a8_unorm)
add_test(NAME texture_bgra8 COMMAND test_texture color b8g8r8a8_unorm)
add_test(NAME texture_r32_float COMMAND test_texture color r32_float)
add_test(NAME texture_rg32_float COMMAND test_texture color r32g32_float)
add_test(NAME texture_rgba32_float COMMAND test_texture color r32g32b32a32_float)
add_test(NAME texture_bgra32_float COMMAND test_texture color b32g32r32a32_float)
add_test(NAME texture_cubemap COMMAND test_texture color cubemap)
add_test(NAME texture_nv12 COMMAND test_texture nv12)
add_test(NAME texture_upload COMMAND test_texture upload)
add_test(NAME texture_upload_subregion COMMAND test_texture upload_subregion)
add_test(NAME texture_download COMMAND test_texture download)
add_test(NAME texture_download_subregion COMMAND test_texture download_subregion)
add_test(NAME texture_map COMMAND test_texture map)
add_test(NAME texture_mipmap COMMAND test_texture mipmap)

add_test(NAME transform_rotate COMMAND test_transform rotate)
add_test(NAME transform_scale COMMAND test_transform scale)
add_test(NAME transform_translate COMMAND test_transform translate)

add_test(NAME viewport COMMAND test_viewport)

add_subdirectory(ref/skia)